--- a/style.css
+++ b/style.css
@@ -19,10 +19,9 @@ body {
     border-radius: 1.7vw;
     padding: 0 clamp(4px, 2vw, 20px);
     user-select: none;
-    width: 90%;
-    max-width: 1000px;
-    height: fit-content;
-    max-height: 400px;
+    /* width: clamp(280px, 70vw, 1000px); */
+    width: auto;
+    height: clamp(100px, 30vw, 350px);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -42,7 +41,7 @@ body {
     align-items: center;
     color: #2d2d2d;
     font-weight: bold;
-    font-size: clamp(14px, 2.5vw, 24px);
+    font-size: clamp(12px, 2.5vw, 24px);
     font-family: 'Orbitron', sans-serif;
 }
 
@@ -58,7 +57,7 @@ body {
     align-items: center;
     color: #fff;
     font-weight: bold;
-    font-size: clamp(14px, 2.5vw, 24px);
+    font-size: clamp(12px, 2.5vw, 24px);
     font-family: 'Orbitron', sans-serif;
     text-transform: uppercase;
 }
@@ -82,6 +81,7 @@ body {
 .hour,
 .min,
 .sec {
+    border: 1px solid #fff;
     padding: 1vw;
     font-size: clamp(55px, 16vw, 200px);
     font-family: 'Digital-7', sans-serif;
@@ -95,6 +95,7 @@ body {
 }
 
 .period {
+    border: 1px solid #fff;
     padding: 1vw;
     font-size: clamp(55px, 16vw, 200px);
     font-family: 'Digital-7', sans-serif;
