--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
     transform: translate(-50%, -50%);
     border: clamp(5px, 1vw, 10px) solid #2d2d2d;
     border-radius: 1.7vw;
-    padding: 3vw clamp(4px, 2vw, 20px) 0;
+    padding: 3vw clamp(4px, 2vw, 20px);
     user-select: none;
     width: auto;
-    height: fit-content;
+    /* height: clamp(100px, 24vw, 300px); */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -80,7 +80,7 @@ body {
 .hour,
 .min,
 .sec {
-    /* border: 1px solid #fff; */
+    border: 1px solid #fff;
     padding: 1vw;
     font-size: clamp(55px, 16vw, 200px);
     font-family: 'Digital-7', sans-serif;
