update the style.css file

--- a/style.css
+++ b/style.css
@@ -85,11 +85,13 @@ body {
     font-size: clamp(55px, 16vw, 200px);
     font-family: 'Digital-7', sans-serif;
     width: clamp(55px, 16vw, 200px);
+    height: auto;
 }
 
 .dot {
     font-size: clamp(55px, 16vw, 200px);
     font-family: 'Digital-7', sans-serif;
+    height: auto;
 }
 
 .period {
@@ -98,6 +100,7 @@ body {
     font-size: clamp(55px, 16vw, 200px);
     font-family: 'Digital-7', sans-serif;
     width: clamp(55px, 16vw, 200px);
+    height: auto;
 }
 
 .invisible {
